# SiPM-PMT-SignalProcessing

./: CMakeLists.txt  main.cpp
include/: HitFindingAlg.h  PlotUtil.h  SGSmoothing.h  WaveformReader.h
src/: HitFindingAlg.cpp  PlotUtil.cpp  SGSmoothing.cpp  WaveformReader.cpp
